updated answer; missing a problem on midterm

--- a/week4/answer/answer.tex
+++ b/week4/answer/answer.tex
@@ -98,7 +98,25 @@ to the work ($w$) done on the gas
   }
 \end{quote}
 
-3. Explain in a few sentences what is meant by the ``world energy crisis'' and why
+3. \textbf{Decomposition of N$_2$O$_4$(g)} Supposed a sample of N$_2$O$_4$(g) has
+a pressure of 6.6 kPa. After some time, a portion of it decomposes to form NO$_2$(g).
+The total pressure of the mixture of gases is then 9.8 kPa. Assume the volume and the
+temperature do not change. What percentage of N$_2$O$_4$(g) has decomposed? Report to
+3 significant figures.
+
+\begin{quote}
+  {\color{blue}
+    \begin{align}
+      PV & = nRT \\
+      \frac{P}{n} & = \frac{RT}{V} \\
+      \frac{P_1}{n_1} & = \frac{P_2}{n_2} 
+    \end{align}
+
+    $P_1$ and $n_1$ are initial while $P_2$ and $n_2$ are the mixture. Determine what $n_2$
+    and solve for change. $48.6\%$ decomposed N$_2$O$_4$
+\end{quote}
+
+4. Explain in a few sentences what is meant by the ``world energy crisis'' and why
 this colloquial term is imprecise in the context of thermodynamics. How is the
 ``world energy crisis'' related to global warming?
 
@@ -108,7 +126,7 @@ this colloquial term is imprecise in the context of thermodynamics. How is the
   }
 \end{quote}
 
-4. Quantitative combustion of 1 g of elemental sulfur, S$_8$(s) ($M = 256.48$ g/mol),
+5. Quantitative combustion of 1 g of elemental sulfur, S$_8$(s) ($M = 256.48$ g/mol),
 to sulfur dioxide gas increases the temperature of a bomb calorimeter from 296 K to
 313.5 K. The heat capacity of the calorimeter is 530 J/K. Report all results to 4
 significant figures.
@@ -134,7 +152,7 @@ d) Estimate the standard enthalpy of formation of gaseous sulfur dioxide from th
   }
 \end{quote}
 
-5. A bath tub contains 75 gal of water at a temperature of 110 F, which is scalding hot.
+6. A bath tub contains 75 gal of water at a temperature of 110 F, which is scalding hot.
 Estimate the volume of 50 F cold tap water needed to bring the temperature to a more
 comfortable 104 F. Assume that the bath tub is thermally insulated. Water has a density
 of approximately 997 kg/m$^3$ and a specific heat capacity of 4.18 J/(g K).
