updated typo worksheet 5

--- a/week5/worksheet_5.tex
+++ b/week5/worksheet_5.tex
@@ -9,7 +9,8 @@
 \usepackage{emptypage}
 \usepackage[backend=biber,style=chem-acs]{biblatex}
 \addbibresource{references.bib}
-
+\usepackage{ulem}
+\usepackage{xcolor}
 %
 % Fonts
 \usepackage[T1]{fontenc} % best for Western European languages
@@ -58,12 +59,12 @@ assignment is due \textit{Tuesday, Feb 8th at 10:00am.}
 \textbf{Enthalpy $\Delta H$, Entropy $\Delta S$, and Free Energy $\Delta G$}
 
 1. (2 pts) Determine $\Delta S_\text{sys}$, $\Delta S_\text{surr}$, and $\Delta S_\text{tot}$ for the
-following processes of 1.48 mols of ideal gas molecules from 13.17 atm and 0.447 atm
+following process of 1.48 mols of ideal gas molecules from 13.17 atm to 0.447 atm
 and 1.29 L at 350K. Report results to 3 significant figures.
 
 (a) A reversible isothermal expansion
 
-(b) A isothermal irreversible free expansion
+(b) An isothermal irreversible free expansion
 
 \vspace{2.5in}
 
