updated worksheets and added worksheet 6

--- a/week5/worksheet_5.tex
+++ b/week5/worksheet_5.tex
@@ -96,6 +96,9 @@ to 4 significant figures.
 
 (c) Determine which process would be the easiest to produce acetic acid. Justify your choice.
 
+% http://www.chm.bris.ac.uk/motm/acetic-acid/acetic-acidjs.htm 
+% -oxidation ethanol
+
 \pagebreak
 
 %5. The protein lysozyme unfolds at a transition temperature of $75.5^\circ\text{C}$ and the
@@ -126,6 +129,9 @@ at each step of the Carnot cylce. Define all variables.
 
 (d) You are operating a Carnot engine with a heat reservoir of 500K and heat sink of
 298K. What is the efficiency of your engine?
+
+% https://physicstasks.eu/2117/total-change-of-entropy-in-carnot-cycle
+% Total entropy of carnot cycle
 
 \begin{figure}[hbpt]
   \includegraphics[width=0.45\textwidth]{carnot.png}
