--- a/week6/worksheet_6.tex
+++ b/week6/worksheet_6.tex
@@ -83,7 +83,7 @@ respectively. What is the entropy change?
 
 \pagebreak
 
-2. (2 pts) \textbf{Temperature dependence on $K$.} ATP is a compound that provides energy
+2. (2 pts) \textbf{Temperature dependence of $K$.} ATP is a compound that provides energy
 for biochemical reactions in the body when it undergoes hydrolysis. For the hydrolysis
 of ATP at $37^\circ\text{C}$ (normal body temperature) $\Delta H^\circ_r = -20.$ and
 $\Delta S_r^\circ = +34 \text{J}\cdot\text{K/mol}$. Assuming that these quantities are independent
