updated worksheet 6 with image and boltzmann problem

--- a/week6/worksheet_6.tex
+++ b/week6/worksheet_6.tex
@@ -83,7 +83,18 @@ respectively. What is the entropy change?
 
 \pagebreak
 
-2. (2 pts) \textbf{Temperature dependence of $K$.} ATP is a compound that provides energy
+2. (4 pts) \textbf{Equilibrium Constant} Calculate the equilibrium constant
+at $25^\circ\text{C}$ for each of the following unbalanced reactions:
+
+(a) the combustion of hydrogen: \ce{H$_2$(g) + O$_2$(g) <=> H$_2$O(g)}
+
+(b) the oxidation of carbon monoxide: \ce{CO(g) + O$_2$(g) <=>  CO$_2$}
+
+(c) the decomposition of limestone: \ce{NO$_2$(g) + H$_2$O(l) <=> HNO$_3$(aq) + NO(g)}
+
+\vspace{3in}
+
+3. (2 pts) \textbf{Temperature dependence of $K$.} ATP is a compound that provides energy
 for biochemical reactions in the body when it undergoes hydrolysis. For the hydrolysis
 of ATP at $37^\circ\text{C}$ (normal body temperature) $\Delta H^\circ_r = -20.$ and
 $\Delta S_r^\circ = +34 \text{J}\cdot\text{K/mol}$. Assuming that these quantities are independent
@@ -92,33 +103,45 @@ hydrolysis of ATP becomes greater than 1. Report to 2 significant figures.
 
 % Atkins 10.114
 
-\vspace{2in}
+\pagebreak
 
-3. (4 pts) \textbf{Mixing Ideal Gases.} A container is divided into two equal compartments.
+4. (4 pts) \textbf{Mixing Ideal Gases.} A container is divided into two equal compartments.
 One contains 3.0 mol CO$_2$ and the other contains 1.0 mol N$_2$ at $25^\circ\text{C}$.
 Assume ideal gas behavior. Calculate the Gibbs free energy of mixing when the partition
 is removed. Report to 2 significant figures.
 
-% http://people.se.cmich.edu/teckl1mm/pchemi/chm351ch7bf01.htm
+% http://people.se.cmich.edu/teckl1mm/pchemi/chm351ch7bf01.htm 
 
-\vspace{2in}
+\vspace{3in}
 
-4. (4 pts) \textbf{No Laughing Matter.} Nitrous oxide (N$_2$O), known as laughing gas,
-has been the largest ozone-depleting substance and has a lifetime of 114 years in the
-atmosphere. N$_2$O undergoes a series of reactions:
+5. Calculate the entropy ($S$) of a tiny solid made up of four diatomic molecules of a compound
+such as carbon monoxide, CO, at $T=0$ when
+
+(a) the four molecules have formed a perfectly ordered crystal in which all molecules are
+aligned with their C atoms on the left (top-left image illustrated below)
+
+(b) the four molecules lie in random orientations (any images illustrated below)
+
 \begin{center}
-  \makebox[4in]{N$_2$O(g) + O(g) + $h\nu$ $\rightarrow$ 2 NO(g) \hspace{1in}} (1)\par
-  \makebox[4in]{\ce{NO(g) + O$_3$(g) <=> NO$_2$(g) + O$_2$(g)}$\,\,$ $K = 7\times 10^{103}$} (2)\par
-  \makebox[4in]{\ce{NO$_2$(g) + O(g) <=> NO(g) + O$_2$(g)}$\,\,$ $K = 5.8\times 10^{-34}$} (3)\par
+  \includegraphics[scale=0.3]{carbon_mono.png}
 \end{center}
-Based on the reactions, describe in words how N$_2$O is impacting ozone concentration.
-\textit{Hint:} Look at the overall reactions (2) and (3). What role does NO and NO$_2$ play?
+
+%4. (4 pts) \textbf{No Laughing Matter.} Nitrous oxide (N$_2$O), known as laughing gas,
+%has been the largest ozone-depleting substance and has a lifetime of 114 years in the
+%atmosphere. N$_2$O undergoes a series of reactions:
+%\begin{center}
+%  \makebox[4in]{N$_2$O(g) + O(g) + $h\nu$ $\rightarrow$ 2 NO(g) \hspace{1in}} (1)\par
+%  \makebox[4in]{\ce{NO(g) + O$_3$(g) <=> NO$_2$(g) + O$_2$(g)}$\,\,$ $K = 7\times 10^{103}$} (2)\par
+%  \makebox[4in]{\ce{NO$_2$(g) + O(g) <=> NO(g) + O$_2$(g)}$\,\,$ $K = 5.8\times 10^{-34}$} (3)\par
+%\end{center}
+%Based on the reactions, describe in words how N$_2$O is impacting ozone concentration.
+%\textit{Hint:} Look at the overall reactions (2) and (3). What role does NO and NO$_2$ play?
 
 \pagebreak
 
 \textbf{Ozone Depletion}
 
-5. (6 pts) \textit{Extra Credit:} Reactions between gases in the atmosphere are not at equilibrium,
+6. (6 pts) \textit{Extra Credit:} Reactions between gases in the atmosphere are not at equilibrium,
 but for a thorough understanding of them we need to study both the rates at which they take
 place and their behavior under equilibrium conditions.
 
@@ -145,7 +168,16 @@ process:
   \ce{NO(g) + O$_3$(g) <=> NO$_2$(g) + O$_2$(g) $\,\,$ $K = 5.8\times 10^{-34}$}
 \end{center}
 
-(d) Determine the standard Gibbs free energy of formation of oxygen atoms from part (c).
+%(d) Determine the standard Gibbs free energy of formation of oxygen atoms from part (c).
+
+(d) \textbf{No Laughing Matter.} Nitrous oxide (N$_2$O), known as laughing gas,
+has been the largest ozone-depleting substance and has a lifetime of 114 years in the
+atmosphere. N$_2$O decomposes into NO in the stratosphere:
+\begin{center}
+  N$_2$O(g) + O(g) + $h\nu$ $\rightarrow$ 2 NO(g)
+\end{center}
+Based on the reaction, describe in words how N$_2$O is impacting ozone concentration.
+\textit{Hint:} Look at the overall reactions in part (c). What role does NO and NO$_2$ play?
 
 (e) The Van't Hoff equation describes the equilibrium constant $K$ in term of temperature
 $T$, gas constant $R$, standard enthalpy ($\Delta H^\circ$) and standard entropy
