added sig figs for worksheet 7

--- a/week7/worksheet_7.tex
+++ b/week7/worksheet_7.tex
@@ -141,7 +141,7 @@ of NO that must be added to a $1.00$ L vesssel containing 0.245 mol SO$_3$(g) to
 6. (4 pts) In a sealed 1.75 L vessel at 250$^\circ$C, equilibrium is established between
 PCl$_5$(g) and its dissociation products, PCl$_3$(g) and Cl$_2$(g). The quantities found
 at equilibrium are 0.562g PCl$_5$, 1.950g PCl$_3$, and 1.007g Cl$_2$. What is the value of
-$K_c$ and $K_p$ for the reaction
+$K_c$ and $K_p$ for the reaction. Report to 4 significant figures.
 \begin{center}
   \ce{PCl$_5$(g) <=> PCl$_3$(g) + Cl$_2$(g)}
 \end{center}
