minor edit worksheet 6

--- a/week6/worksheet_6.tex
+++ b/week6/worksheet_6.tex
@@ -168,7 +168,7 @@ process:
   \ce{NO(g) + O$_3$(g) <=> NO$_2$(g) + O$_2$(g) $\,\,$ $K = 5.8\times 10^{-34}$}
 \end{center}
 
-%(d) Determine the standard Gibbs free energy of formation of oxygen atoms from part (c).
+(d) Determine the standard Gibbs free energy of formation of oxygen atoms from part (c).
 
 (d) \textbf{No Laughing Matter.} Nitrous oxide (N$_2$O), known as laughing gas,
 has been the largest ozone-depleting substance and has a lifetime of 114 years in the
