--- a/week6/worksheet_6.tex
+++ b/week6/worksheet_6.tex
@@ -170,7 +170,7 @@ process:
 
 (d) Determine the standard Gibbs free energy of formation of oxygen atoms from part (c).
 
-(d) \textbf{No Laughing Matter.} Nitrous oxide (N$_2$O), known as laughing gas,
+(e) \textbf{No Laughing Matter.} Nitrous oxide (N$_2$O), known as laughing gas,
 has been the largest ozone-depleting substance and has a lifetime of 114 years in the
 atmosphere. N$_2$O decomposes into NO in the stratosphere:
 \begin{center}
@@ -179,7 +179,7 @@ atmosphere. N$_2$O decomposes into NO in the stratosphere:
 Based on the reaction, describe in words how N$_2$O is impacting ozone concentration.
 \textit{Hint:} Look at the overall reactions in part (c). What role does NO and NO$_2$ play?
 
-(e) The Van't Hoff equation describes the equilibrium constant $K$ in term of temperature
+(f) The Van't Hoff equation describes the equilibrium constant $K$ in term of temperature
 $T$, gas constant $R$, standard enthalpy ($\Delta H^\circ$) and standard entropy
 ($\Delta S^\circ$):
 \begin{equation}
@@ -189,7 +189,7 @@ For the reaction \ce{N$_2$(g) + O$_2$(g) <=> 2 NO(g)}, will this reaction procee
 at very low temperatures of the stratosphere or high temperatures in an internal combustion
 engine? What implications do this suggest?
 
-(f) An equimolar mixture of N$_2$(g) and O$_2$(g) with a total pressure of 4.00 bar
+(g) An equimolar mixture of N$_2$(g) and O$_2$(g) with a total pressure of 4.00 bar
 was allowed to come to equilibrium in the reaction in part (e) at 1200. K. What will
 be the partial pressure of each reactant and product at equilibrium?
 
