added points for boltzmann problme

--- a/week6/worksheet_6.tex
+++ b/week6/worksheet_6.tex
@@ -114,7 +114,7 @@ is removed. Report to 2 significant figures.
 
 \vspace{3in}
 
-5. Calculate the entropy ($S$) of a tiny solid made up of four diatomic molecules of a compound
+5. (4 pts) Calculate the entropy ($S$) of a tiny solid made up of four diatomic molecules of a compound
 such as carbon monoxide, CO, at $T=0$ when
 
 (a) the four molecules have formed a perfectly ordered crystal in which all molecules are
