--- a/week7/worksheet_7.tex
+++ b/week7/worksheet_7.tex
@@ -92,7 +92,7 @@ $G(P) = G^\circ + nRT \ln\frac{P}{P^\circ}$.
 
 (b) Using the equation in (a), at what temperature is the following reaction at equilibrium?
 \begin{center}
-  \ce{CO$_2$(g) + H$_2$O(g) <=> H$_2$(g) + CO$_2$(g)}
+  \ce{CO(g) + H$_2$O(g) <=> H$_2$(g) + CO$_2$(g)} $\,\, K = 9.6175 \times 10^4$
 \end{center}
 
 % Atkins pg 391
