--- a/week8/answer/answer.tex
+++ b/week8/answer/answer.tex
@@ -86,8 +86,8 @@ can be obtained from the Gibbs free energy change of a process? Name at least tw
 for determining the Gibbs free energy of a chemical reaction experimentally, computationally,
 or using tabulated data.
 
-\brian{$\Delta G$ provides information about spontaneity and equilibrium constant of a given
-  reaction. It also provides the direction or ``driving force'' for a reaction to achieve
+\brian{$\Delta G$ provides information about spontaneity of a given reaction at temperature
+  $T$. It also provides the direction or ``driving force'' for a reaction to achieve
   equilibrium. Two ways of determining the Gibbs free energy of a reaction:
   \begin{enumerate}
   \item $\Delta G = \Delta H^\circ_r - T\Delta S^\circ_r$ where $\Delta H^\circ_r$ and $\Delta S^\circ_r$
@@ -113,7 +113,7 @@ given the following data set at 25$^\circ$C. Report result to 2 significant figu
   \ce{2 NO$_2$(g) + Cl$_2$(g) <=> 2 NO$_2$Cl(g) $\,\,$ $K_p = 9.0\times 10^{-2}$ atm$^{-1}$}
 \end{center}
 
-\brian{Invert the second equation and sum. The overall $K_p = 7.4\times 10^{-24}$ atm$^{-1}$
+\brian{Invert the second equation and take the product. The overall $K_p = 7.4\times 10^{-24}$ atm$^{-1}$
   and $K_c = 3.0 \times 10^{-25}$ M$^{-1}$
   }
 
@@ -155,7 +155,7 @@ c) Qualitatively plot $\ln K$ as a function of $1/T$ based on your results from 
   \includegraphics[scale=0.1]{vant_hoff.jpeg}
 \end{center}
 
-{\color{blue} d) Using the plot in c), at what temperatures is the product favored for the
+{\color{blue} d) Using the plot in c), at what temperature range is the product favored for the
   dissociation of NOCl? Briefly explain your answer.}
 
 \brian{Temperatures above 238 K will favor the dissociation of NOCl. Because $\Delta H^\circ > 0$,
