--- a/week8/answer/answer.tex
+++ b/week8/answer/answer.tex
@@ -184,8 +184,8 @@ temperature is kept constant. Determine the total enthalpy.
 
 \brian{65.4 kJ}
 
-c) Estimate the {\color{blue} root mean square} {\color{red} \sout{rms}} velocity of the ethyne
-molecules in m/s at 300 K.
+c) Estimate the {\color{blue} root mean square} {\color{red} \sout{rms}} velocity
+{\color{blue}($v_\text{rms}$)} of the ethyne molecules in m/s at 300 K.
 
 \brian{Convert 2.5 moles to mass in kg
   \begin{align*}
