--- a/week8/answerb/answer.tex
+++ b/week8/answerb/answer.tex
@@ -37,7 +37,7 @@
 %
 %
 % Title, authors, date
-\title{\textbf{Midterm 2a Problems}}
+\title{\textbf{Midterm 2b Problems}}
 %
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -49,35 +49,23 @@
 
 \maketitle
 
-1. \textbf{Entropy} Does the entropy of the system/reaction mixture increase,
-decrease, or stay the same in the following processes? Briefly explain your
-answer in each case.
+1. \textbf{Equilibrium Constants} Determine $K_c$ at 25$^\circ$C
+for the reaction,
+\begin{center}
+  \ce{N$_2$(g) + O$_2$(g) + Cl$_2$(g) <=> 2 NOCl(g)},
+\end{center}
+given the following data set at 25$^\circ$C. Report result to 2 significant figures.
+\begin{center}
+  \ce{N$_2$(g) + 2 O$_2$(g) <=> 2 NO$_2$(g) $\,\,$ $K_p = 1.0\times 10^{-18}$ atm$^{-1}$}
 
-a) Haber-Bosch synthesis of ammonia
+  \ce{2 NOCl(g) + O$_2$(g) <=> 2 NO$_2$Cl(g) $\,\,$ $K_p = 1.21\times 10^4$ atm$^{-1}$}
 
-\brian{N$_2$(g) + 3 H$_2$(g) $\rightleftharpoons$ 2 NH$_3$(g)
+  \ce{2 NO$_2$(g) + Cl$_2$(g) <=> 2 NO$_2$Cl(g) $\,\,$ $K_p = 9.0\times 10^{-2}$ atm$^{-1}$}
+\end{center}
 
-  Entropy decreases since there are fewer moles of products than reactants
-}
-
-b) Isomerization of neopentance (2,2-dimethylpropane) to $n$-pentane
-
-\brian{Entropy increases since $n$-pentane has greater flexibility; draw the
-  Lewis structures
-}
-
-c) Isothermal compression of an ideal gas
-
-\brian{Entropy decreases since the volume decreases
-  \begin{equation*}
-    \Delta S = R\ln\frac{V_f}{V_i}
-  \end{equation*}
-  where $V_f$ and $V_i$ are the final and initial states, respectively.
-}
-
-d) Mixing of two ideal gases at constant temperature, total pressure, and total volume
-
-\brian{Entropy increases since partial pressures of the gases decreases upon mixing.}
+\brian{Invert the second equation and take the product. The overall $K_p = 7.4\times 10^{-24}$ atm$^{-1}$
+  and $K_c = 3.0 \times 10^{-25}$ M$^{-1}$
+  }
 
 2. \textbf{Essay Question: Gibbs Free Energy} Explain in a few sentences why the Gibbs
 free energy is a central quantity in chemical thermodynamics. What type(s) of information
@@ -98,23 +86,33 @@ or using tabulated data.
   \end{enumerate}
 }
 
-3. \textbf{Equilibrium Constants} Determine $K_c$ at 25$^\circ$C
-for the reaction,
-\begin{center}
-  \ce{N$_2$(g) + O$_2$(g) + Cl$_2$(g) <=> 2 NOCl(g)},
-\end{center}
-given the following data set at 25$^\circ$C. Report result to 2 significant figures.
-\begin{center}
-  \ce{N$_2$(g) + 2 O$_2$(g) <=> 2 NO$_2$(g) $\,\,$ $K_p = 1.0\times 10^{-18}$ atm$^{-1}$}
+3. \textbf{Entropy} Does the entropy of the system/reaction mixture increase,
+decrease, or stay the same in the following processes? Briefly explain your
+answer in each case.
 
-  \ce{2 NOCl(g) + O$_2$(g) <=> 2 NO$_2$Cl(g) $\,\,$ $K_p = 1.21\times 10^4$ atm$^{-1}$}
+a) Isothermal expansion of a fixed amount of an ideal gas
 
-  \ce{2 NO$_2$(g) + Cl$_2$(g) <=> 2 NO$_2$Cl(g) $\,\,$ $K_p = 9.0\times 10^{-2}$ atm$^{-1}$}
-\end{center}
+\brian{Entropy increases since the volume decreases
+  \begin{equation*}
+    \Delta S = R\ln\frac{V_f}{V_i}
+  \end{equation*}
+  where $V_f$ and $V_i$ are the final and initial states, respectively.
+}
 
-\brian{Invert the second equation and take the product. The overall $K_p = 7.4\times 10^{-24}$ atm$^{-1}$
-  and $K_c = 3.0 \times 10^{-25}$ M$^{-1}$
-  }
+b) Haber-Bosch synthesis of ammonia
+
+\brian{N$_2$(g) + 3 H$_2$(g) $\rightleftharpoons$ 2 NH$_3$(g)
+
+  Entropy decreases since there are fewer moles of products than reactants
+}
+
+c) Evaporation of a liquid
+
+\brian{Entropy increases since gases occupy greater volume}
+
+d) Mixing of two ideal gases at constant temperature, total pressure, and total volume
+
+\brian{Entropy increases since partial pressures of the gases decreases upon mixing.}
 
 4. \textbf{Van't Hoff Equation} In the gas phase, nitrosyl chloride NOCl is in chemical
 equilibrium with its dissociation products, nitrogen monoxide and chlorine gas.
@@ -161,7 +159,7 @@ c) Qualitatively plot $\ln K$ as a function of $1/T$ based on your results from 
 %  the reaction is endothermic and this means that $K$ increases with increasing temperature.
 %}
 
-5. \textbf{Statistical Thermodynamics} 2.5 mol of ethyne (a.k.a. acetylene, C$_2$H$_2$) gas
+5. \textbf{Statistical Thermodynamics} 1.5 mol of ethyne (a.k.a. acetylene, C$_2$H$_2$) gas
 are kept in a 1 L steel cylinder. Assume ideal behavor.
 
 a) Determine the total entalpy of the sample at 300 K.
@@ -173,15 +171,15 @@ a) Determine the total entalpy of the sample at 300 K.
     H = & U - PV \\
     = & U - nRT \\
     = & \frac{5}{2}nRT - nRT \\
-    = & (\frac{5}{2} - 1)(2.5\times 0.08206 \times 300) \\
-    = &  \text{92.3175 L atm} = 9.35 \text{ kJ}
+    = & (\frac{5}{2} - 1)(1.5\times 0.08206 \times 300) \\
+    = &  \text{55.3905 L atm} = 5.61 \text{ kJ}
   \end{align*}  
 }
 
 b) The pressure of the sample is doubled by reducing the volume to 0.5 L. The
 temperature is kept constant. Determine the total enthalpy.
 
-\brian{9.35 kJ}
+\brian{5.61 kJ}
 
 c) Estimate the root mean square (rms) velocity of the ethyne molecules in m/s at 300 K.
 The mass of a single ethyne molecule is $4.324\times 10^{-26}$ kg.
@@ -200,7 +198,7 @@ d) Determine the entropy change when the original gas sample is heated from 300 
 \brian{Determing $C_v = f_q\frac{1}{2}nR$
   \begin{align*}
     \Delta S = & C_v\ln\frac{T_f}{T_i} \\
-    = & 51.0 \text{ J/K}
+    = & 30.6 \text{ J/K}
   \end{align*}
 }
 
