updated midterm solutions

--- a/week8/answerb/answer.tex
+++ b/week8/answerb/answer.tex
@@ -92,7 +92,7 @@ answer in each case.
 
 a) Isothermal expansion of a fixed amount of an ideal gas
 
-\brian{Entropy increases since the volume decreases
+\brian{Entropy increases since the volume increases
   \begin{equation*}
     \Delta S = R\ln\frac{V_f}{V_i}
   \end{equation*}
@@ -110,7 +110,8 @@ c) Evaporation of a liquid
 
 \brian{Entropy increases since gases occupy greater volume}
 
-d) Mixing of two ideal gases at constant temperature, total pressure, and total volume
+d) Mixing of fixed amounts of two chemically different ideal gases at constant temperature, 
+total pressure, and total volume
 
 \brian{Entropy increases since partial pressures of the gases decreases upon mixing.}
 
@@ -141,15 +142,14 @@ at which the equilibrium constant $K$ equals 1.
   \begin{equation*}
       \ln K = -\frac{\Delta H^\circ}{RT} + \frac{\Delta S^\circ}{R}
   \end{equation*}
-  and determine $\Delta H^\circ = 77.16$ kJ/mol and $\Delta S^\circ=324.92$ J/(mol K). The
-  temperature at which $K=1$ is 238 K.
+  and determine $\Delta H^\circ = 77.16$ kJ/mol and $\Delta S^\circ=121.96$ J/(mol K). The
+  temperature at which $K=1$ is 633 K.
 }
 
-c) Qualitatively plot $\ln K$ as a function of $1/T$ based on your results from (b). {\color{blue}
-  Label your axes.}
+c) Qualitatively plot $\ln K$ as a function of $1/T$ based on your results from (b).
 
 \begin{center}
-  \includegraphics[scale=0.1]{vant_hoff.jpeg}
+  \includegraphics[scale=0.4]{vant_hoff.png}
 \end{center}
 
 %{\color{blu-1e} d) Using the plot in c), at what temperature range is the product favored for the
@@ -164,22 +164,22 @@ are kept in a 1 L steel cylinder. Assume ideal behavor.
 
 a) Determine the total entalpy of the sample at 300 K.
 
-\brian{$U = H + PV$ at constant pressure $P$ and $H$ is the total enthalpy. Quadratic degree
+\brian{$U = H - PV$ at constant pressure $P$ and $H$ is the total enthalpy. Quadratic degree
   of freedom $f_q = 5 $. Hence, $U = \frac{5}{2}nRT$ and using ideal gas $PV = nRT$
 
   \begin{align*}
-    H = & U - PV \\
-    = & U - nRT \\
-    = & \frac{5}{2}nRT - nRT \\
-    = & (\frac{5}{2} - 1)(1.5\times 0.08206 \times 300) \\
-    = &  \text{55.3905 L atm} = 5.61 \text{ kJ}
+    H = & U + PV \\
+    = & U + nRT \\
+    = & \frac{5}{2}nRT + nRT \\
+    = & (\frac{5}{2} + 1)(1.5\times 0.08206 \times 300) \\
+    = &  \text{129.2445 L atm} = 13.1 \text{ kJ}
   \end{align*}  
 }
 
 b) The pressure of the sample is doubled by reducing the volume to 0.5 L. The
 temperature is kept constant. Determine the total enthalpy.
 
-\brian{5.61 kJ}
+\brian{13.1 kJ}
 
 c) Estimate the root mean square (rms) velocity of the ethyne molecules in m/s at 300 K.
 The mass of a single ethyne molecule is $4.324\times 10^{-26}$ kg.
@@ -188,7 +188,7 @@ The mass of a single ethyne molecule is $4.324\times 10^{-26}$ kg.
   \begin{align*}
     \frac{1}{2}mv^2_\text{rms} = & \frac{3}{2}kT \\
     v_\text{rms} = & \sqrt{\frac{3}{4.324\times 10^{-26}}(1.3806\times 10^{-23})(300)} \\
-    v_\text{rms} = & 2.87\times 10^5 \text{ m/s}
+    v_\text{rms} = & 536 \text{ m/s}
   \end{align*}
 }
 
