--- a/week8/answer/answer.tex
+++ b/week8/answer/answer.tex
@@ -75,7 +75,8 @@ c) Isothermal compression of an ideal gas
   where $V_f$ and $V_i$ are the final and initial states, respectively.
 }
 
-d) Mixing of two ideal gases at constant temperature, total pressure, and total volume
+d) Mixing of fixed amounts of two chemically different ideal gases at constant temperature,
+total pressure, and total volume
 
 \brian{Entropy increases since partial pressures of the gases decreases upon mixing.}
 
@@ -143,15 +144,15 @@ at which the equilibrium constant $K$ equals 1.
   \begin{equation*}
       \ln K = -\frac{\Delta H^\circ}{RT} + \frac{\Delta S^\circ}{R}
   \end{equation*}
-  and determine $\Delta H^\circ = 77.16$ kJ/mol and $\Delta S^\circ=324.92$ J/(mol K). The
-  temperature at which $K=1$ is 238 K.
+  and determine $\Delta H^\circ = 77.16$ kJ/mol and $\Delta S^\circ=121.96$ J/(mol K). The
+  temperature at which $K=1$ is 633 K.
 }
 
 c) Qualitatively plot $\ln K$ as a function of $1/T$ based on your results from (b). {\color{blue}
   Label your axes.}
 
 \begin{center}
-  \includegraphics[scale=0.1]{vant_hoff.jpeg}
+  \includegraphics[scale=0.4]{vant_hoff.png}
 \end{center}
 
 %{\color{blu-1e} d) Using the plot in c), at what temperature range is the product favored for the
@@ -166,22 +167,22 @@ are kept in a 1 L steel cylinder. Assume ideal behavor.
 
 a) Determine the total entalpy of the sample at 300 K.
 
-\brian{$U = H + PV$ at constant pressure $P$ and $H$ is the total enthalpy. Quadratic degree
+\brian{$U = H - PV$ at constant pressure $P$ and $H$ is the total enthalpy. Quadratic degree
   of freedom $f_q = 5 $. Hence, $U = \frac{5}{2}nRT$ and using ideal gas $PV = nRT$
 
   \begin{align*}
-    H = & U - PV \\
-    = & U - nRT \\
-    = & \frac{5}{2}nRT - nRT \\
-    = & (\frac{5}{2} - 1)(2.5\times 0.08206 \times 300) \\
-    = &  \text{92.3175 L atm} = 9.35 \text{ kJ}
+    H = & U + PV \\
+    = & U + nRT \\
+    = & \frac{5}{2}nRT + nRT \\
+    = & (\frac{5}{2} + 1)(2.5\times 0.08206 \times 300) \\
+    = &  \text{215.4075 L atm} = 21.8 \text{ kJ}
   \end{align*}  
 }
 
 b) The pressure of the sample is doubled by reducing the volume to 0.5 L. The
 temperature is kept constant. Determine the total enthalpy.
 
-\brian{9.35 kJ}
+\brian{21.8 kJ}
 
 c) Estimate the root mean square (rms) velocity of the ethyne molecules in m/s at 300 K.
 The mass of a single ethyne molecule is $4.324\times 10^{-26}$ kg.
@@ -190,7 +191,7 @@ The mass of a single ethyne molecule is $4.324\times 10^{-26}$ kg.
   \begin{align*}
     \frac{1}{2}mv^2_\text{rms} = & \frac{3}{2}kT \\
     v_\text{rms} = & \sqrt{\frac{3}{4.324\times 10^{-26}}(1.3806\times 10^{-23})(300)} \\
-    v_\text{rms} = & 2.87\times 10^5 \text{ m/s}
+    v_\text{rms} = & 536 \text{ m/s}
   \end{align*}
 }
 
