--- a/week8/answer/answer.tex
+++ b/week8/answer/answer.tex
@@ -99,7 +99,7 @@ or using tabulated data.
   \end{enumerate}
 }
 
-3. \textbf{Equilibrium Constants} Determine $K_c$ at 25$^\circ$C
+3. \textbf{Equilibrium Constants} Determine $K$ at 25$^\circ$C
 for the reaction,
 \begin{center}
   \ce{N$_2$(g) + O$_2$(g) + Cl$_2$(g) <=> 2 NOCl(g)},
@@ -114,8 +114,12 @@ given the following data set at 25$^\circ$C. Report result to 2 significant figu
 \end{center}
 
 \brian{Invert the second equation and take the product. The overall $K_p = 7.4\times 10^{-24}$ atm$^{-1}$
-  and $K_c = 3.0 \times 10^{-25}$ M$^{-1}$
-  }
+  and $K = 7.3\times 10^{-24}$
+}
+
+%\brian{Invert the second equation and take the product. The overall $K_p = 7.4\times 10^{-24}$ atm$^{-1}$
+%  and $K_c = 3.0 \times 10^{-25}$ M$^{-1}$
+%  }
 
 4. \textbf{Van't Hoff Equation} In the gas phase, nitrosyl chloride NOCl is in chemical
 equilibrium with its dissociation products, nitrogen monoxide and chlorine gas.
