--- a/week8/answerb/answer.tex
+++ b/week8/answerb/answer.tex
@@ -49,7 +49,7 @@
 
 \maketitle
 
-1. \textbf{Equilibrium Constants} Determine $K_c$ at 25$^\circ$C
+1. \textbf{Equilibrium Constants} Determine $K$ at 25$^\circ$C
 for the reaction,
 \begin{center}
   \ce{N$_2$(g) + O$_2$(g) + Cl$_2$(g) <=> 2 NOCl(g)},
@@ -64,8 +64,12 @@ given the following data set at 25$^\circ$C. Report result to 2 significant figu
 \end{center}
 
 \brian{Invert the second equation and take the product. The overall $K_p = 7.4\times 10^{-24}$ atm$^{-1}$
-  and $K_c = 3.0 \times 10^{-25}$ M$^{-1}$
-  }
+  and $K = 7.3\times 10^{-24}$
+}
+
+%\brian{Invert the second equation and take the product. The overall $K_p = 7.4\times 10^{-24}$ atm$^{-1}$
+%  and $K_c = 3.0 \times 10^{-25}$ M$^{-1}$
+%  }
 
 2. \textbf{Essay Question: Gibbs Free Energy} Explain in a few sentences why the Gibbs
 free energy is a central quantity in chemical thermodynamics. What type(s) of information
