--- a/week9/worksheet_8.tex
+++ b/week9/worksheet_8.tex
@@ -35,7 +35,7 @@
 %
 % Title, authors, date
 \title{\textbf{Worksheet 8}}
-\date{\vspace{-2em}March 1st, 2022}
+\date{\vspace{-2em}March 3rd, 2022}
 %
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -53,11 +53,16 @@ cited. An \textit{extra credit} (\textit{EC}) problem will be available per
 assignment. Please submit a completed homework on-time to receive \textit{EC}
 and no partial \textit{EC} (all parts must be correct) will be given out.
 Additional problems are listed at the end of each assignment. This week's
-assignment is due \textit{Tuesday, Feb 22nd at 10:00am.}
+assignment is due \textit{Tuesday, March 8th at 2:00pm.}
 
-1.
+1. 
 
 \vfill
-\textbf{Optional Additional Problems:} Ch. 15 - odd problems 21 - 49 
+\textbf{Optional Additional Problems:} Ch. 11 - odd problems $35 - 45$,
+$53 - 89$
+
+Ch. 13 - odd problems $65 - 93$
+
+Ch. 12 - odd problems $27 - 51$, $77 - 89$
 
 \end{document}
