--- a/week7/worksheet_7.tex
+++ b/week7/worksheet_7.tex
@@ -177,8 +177,8 @@ gas species $X$ at various $T$. \textit{Hint:} Create a scatter plot.
 % N2:   Hf 0 kJ/mol and S 191.609 J/(mol K)
 % Cl2:  Hf 0 kJ/mol and S 223.081 J/(mol K)
 %
-% Standard Enthalpy -68.49 kJ/mol => slope -8.2364165 T
-% Standard Entropy  114.109 J/(mol K) => y-int 13.724
+% Standard Enthalpy -1230.18 kJ/mol => slope 147,955/T
+% Standard Entropy   508.644 J/(mol K) => y-int 61.1755
 
 \pagebreak
 
