--- a/week8/midterm2.tex
+++ b/week8/midterm2.tex
@@ -81,7 +81,7 @@ quantities. \textit{Hint:} Create a plot to illustrate the process.
 
 2. (6 pts) \textbf{Mixing of Ideal Gas} Assume ideal gas conditions. At 25$^\circ$C,
 nitrogen dioxide NO$_2$(g) and dinitrogen tetraoxide N$_2$O$_4$(g) are
-separated into equal volumes $V$, see Fig. \ref{fig:mix}. The initial pressures of the
+separated into equal 1L compartments, see Fig. \ref{fig:mix}. The initial pressures of the
 NO$_2$(g) and N$_2$O$_4$(g) are both at 1.25 atm. The valve is then opened allowing
 the gases to mix. Report all results to 2 significant figures.
 
